--- a/src/templates/profile/add_course.html
+++ b/src/templates/profile/add_course.html
@@ -42,7 +42,7 @@
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium">Imagen del curso</label>
+                <label class="block text-primary_black font-medium">Imagen del certificado del curso</label>
                 <div class="mt-1 flex justify-center items-center px-6 pt-5 pb-6 border-2 border-dashed rounded-md relative">
                     <div class="space-y-1 text-center">
                         <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
