--- a/src/templates/navigation/navbar.html
+++ b/src/templates/navigation/navbar.html
@@ -1,4 +1,5 @@
-<nav class="flex flex-col h-screen p-4 space-y-4 w-full bg-white shadow-lg">
+<nav class="flex flex-col h-screen w-full p-4 bg-white shadow-lg">
+
   <!-- Logo -->
   <div class="text-2xl font-bold mb-8">
     <a href="{% url 'home' %}" class="text-[#6C4EF4] flex items-center space-x-2">
@@ -31,6 +32,7 @@
 
   <!-- Mi Perfil Link -->
   <a href="{% url 'profile' %}" class="flex items-center p-2 mt-4 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
+    {% include 'icon/profile.html' with property="outline" %}
     Mi Perfil
   </a>
 
@@ -40,16 +42,19 @@
 
     <!-- Ajustes Link -->
     <a href="{% url 'settings' %}" class="flex items-center p-2 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
+      {% include 'icon/settings.html' with property="outline" %}
       Ajustes
     </a>
 
      <!-- Ayuda y Soporte Link -->
   <a href="{% url 'support' %}" class="flex items-center p-2 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
+    {% include 'icon/info-circle.html' with property="outline" %}
     Ayuda y Soporte
   </a>
 
     <!-- Log Out Link -->
     <a href="{% url 'logout' %}" class="flex items-center p-2 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
+      {% include 'icon/logout.html' with property="outline" %}
       Log Out
     </a>
   </div>
