--- a/src/templates/navigation/navigation.html
+++ b/src/templates/navigation/navigation.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="flex flex-row">
-    <div class="w-[20%]">
+    <div class="w-72">
         {% include "navigation/navbar.html" %}
     </div>
     <div class="w-full px-9 py-2">
