--- a/src/templates/projects/create_assigment.html
+++ b/src/templates/projects/create_assigment.html
@@ -4,21 +4,21 @@
 
 {% block app_content %}
 
-<div class="flex justify-center items-center h-screen">
+<div class="flex justify-center items-center">
     <h3></h3>
 
     <div class="flex flex-col mx-40 bg-bg_gray p-6 rounded-lg shadow-lg w-full h-full">
         <form method="post">
             {% csrf_token %}
             <div class="mt-8">
-                <label for="name" class="block text-md font-medium text-primary_black">Nombre de la Tarea</label>
+                <label for="name" class="block text-md font-medium text-primary_black">Nombre del Entregable</label>
                 <input id="name" name="name" type="text"
                     class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
                     required>
             </div>
             <div class="mt-8">
-                <label for="description" class="block text-md font-medium text-primary_black">Descripción de la
-                    Tarea</label>
+                <label for="description" class="block text-md font-medium text-primary_black">Descripcion del
+                    Entregable</label>
                 <textarea id="description" name="description" rows="3"
                     class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
                     required></textarea>
