--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -4,7 +4,7 @@
 {% block title %}Creación de proyecto{% endblock %}
 
 {% block content %}
-<div class="px-20 py-8 h-screen">
+<div class="px-20 py-8">
     <h1 class="text-2xl font-bold text-primary_black mb-2">Creación de proyecto</h1>
     <h2 class="text-lg text-primary_dark mb-6">Información de los proyectos</h2>
 
