--- a/src/templates/projects/task_creation.html
+++ b/src/templates/projects/task_creation.html
@@ -4,7 +4,7 @@
 
 {% block app_content %}
 
-<div class="flex justify-center items-center h-screen">
+<div class="flex justify-center items-center">
 
     <div class="flex flex-col mx-40 bg-bg_gray p-6 rounded-lg shadow-lg w-full h-full">
         <form method="post">
