Refactor: refactorizar rutas y estilos en el perfil del freelancer

--- a/src/templates/profile/freelancer_profile.html
+++ b/src/templates/profile/freelancer_profile.html
@@ -86,7 +86,7 @@
     </div>
 
     <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-8">
-        <h2 class="text-2xl font-bold text-gray-800">Portafolio</h2>
+        <h2 class="text-2xl font-bold text-primary_black">Portafolio</h2>
 
         {% if portfolio %}
         <h4 class="text-xl font-semibold text-primary_medium mt-4">Proyectos</h4>
@@ -134,7 +134,7 @@
 
 
     <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-8">
-        <h2 class="text-xl font-bold text-gray-800">Curriculum Vitae</h2>
+        <h2 class="text-2xl font-bold text-primary_black">Curriculum Vitae</h2>
         {% if profile.freelancer_cv and profile.freelancer_cv.file %}
         <a href="{{ profile.freelancer_cv.file.url }}" class="text-purple-600 hover:text-purple-500 underline">Descargar
             Curriculum</a>
