--- a/src/templates/projects/project_list.html
+++ b/src/templates/projects/project_list.html
@@ -22,17 +22,7 @@
     
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         {% for project in projects %}
-        <div class="bg-white rounded-lg shadow-md overflow-hidden">
-            <div class="bg-purple-600 h-32"></div>
-            <div class="p-4">
-                <h2 class="text-xl font-semibold mb-2">{{ project.title }}</h2>
-                <p class="text-gray-600 mb-4">{{ project.description|truncatewords:20 }}</p>
-                <div class="flex justify-between items-center">
-                    <span class="text-sm text-gray-500">Presupuesto: ${{ project.budget }}</span>
-                    <a href="/project/{{project.id}}/milestone" class="text-blue-500 hover:underline">Ver Detalles</a>
-                </div>
-            </div>
-        </div>
+            {% include 'projects/project_card.html' %}
         {% empty %}
         <p class="text-gray-500 col-span-3">No tienes proyectos.</p>
         {% endfor %}
