--- a/src/templates/projects/assigment_section.html
+++ b/src/templates/projects/assigment_section.html
@@ -4,15 +4,20 @@
     <div class="mt-4">
         <div class="flex flex-col">
             <!-- Add a scrollable container with fixed height -->
-            <div class="overflow-y-auto h-64 w-full p-4 bg-gray-100 rounded-lg"> 
+            <div class="overflow-y-auto h-64 w-full p-4 bg-gray-100 rounded-lg">
                 {% for assigment in milestone.assigments.all %}
-                <div class="bg-bg_white p-4 mb-4 rounded-lg text-center space-y-4 shadow-md">
-                    <h3 class="text-md font-bold text-primary_medium">{{ assigment.title }}</h3>
+                <div class="bg-bg_white p-4 mb-4 rounded-lg space-y-4 shadow-md">
+                    <div class="flex justify-between items-center">
+                        <h3 class="text-md font-bold text-primary_medium text-right">{{ assigment.title }}</h3>
+                        <a href="/project/assigment/edit/{{assigment.milestone.id}}">
+                            {% include 'icon/EditIcon.html' with h=24 w=24 %}
+                        </a>
+                    </div>
                     <span>Asignado a: {{ assigment.responsible.username }}</span>
                     <p class="text-sm ">{{ assigment.description|truncatewords:50 }}</p>
                     <p class="text-sm text-primary_medium">Fecha de Finalización: {{ assigment.end_date }}</p>
                     <p class="text-sm text-primary_medium">Estado: {{ assigment.state }}</p>
-                    <div class="mt-2">
+                    <div class="mt-2 text-center">
                         {% include 'utils/anchor_button.html' with type=1 label='Subir Entrega' %}
                     </div>
                 </div>
