--- a/src/templates/projects/create_assigment.html
+++ b/src/templates/projects/create_assigment.html
@@ -5,23 +5,23 @@
 {% block app_content %}
 
 <div class="flex justify-center items-center">
-    <h3></h3>
 
     <div class="flex flex-col mx-40 bg-bg_gray p-6 rounded-lg shadow-lg w-full h-full">
         <form method="post">
             {% csrf_token %}
             <div class="mt-8">
                 <label for="name" class="block text-md font-medium text-primary_black">Nombre del Entregable</label>
-                <input id="name" name="name" type="text"
-                    class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
-                    required>
+                <input id="name" name="name" type="text" {% if is_editing %} value="{{milestone.name}}" {% endif%} <!-- TODO: FIX -->
+                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none
+                focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
+                required>
             </div>
             <div class="mt-8">
                 <label for="description" class="block text-md font-medium text-primary_black">Descripcion del
                     Entregable</label>
                 <textarea id="description" name="description" rows="3"
                     class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
-                    required></textarea>
+                    required>{% if is_editing %} {% endif %}</textarea>
             </div>
 
             <div class="w-1/2 mt-8">
@@ -35,7 +35,7 @@
             </div>
 
             <div class="justify-end  items-center">
-                <a href="/project/{{project_id}}/task">
+                <a href="/project/edit_milestone/{{milestone.id}}">
                     <button type="button" class="bg-gray-300 text-gray-800 px-4 py-2 rounded-lg mr-2">Cancelar</button>
                 </a>
                 <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg">Guardar</button>
