--- a/src/templates/projects/assigment_section.html
+++ b/src/templates/projects/assigment_section.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+
+{{ milestone.id|json_script:"milestone-id" }}
 <div class="mt-8 w-full">
     <h3 class="text-lg font-semibold text-primary_black">Entregables</h3>
 
@@ -9,9 +13,16 @@
                 <div class="bg-bg_white p-4 mb-4 rounded-lg space-y-4 shadow-md">
                     <div class="flex justify-between items-center">
                         <h3 class="text-md font-bold text-primary_medium text-right">{{ assigment.title }}</h3>
-                        <a href="/project/assigment/edit/{{assigment.milestone.id}}">
-                            {% include 'icon/EditIcon.html' with h=24 w=24 %}
-                        </a>
+                        <div class="flex gap-4">
+                            <!-- botton de borar -->
+                            <a href="/project/assigment/delete/{{assigment.id}}" id="delete-assigment">
+                                <button class="rounded-lg p-1 px-2 text-white">{% include 'icon/DeleteIcon.html' with h=24 w=24 %}</button>
+                            </a>
+                            <!-- botton de editar -->
+                            <a href="/project/assigment/edit/{{assigment.id}}">
+                                {% include 'icon/EditIcon.html' with h=24 w=24 %}
+                            </a>
+                        </div>
                     </div>
                     <span>Asignado a: {{ assigment.responsible.username }}</span>
                     <p class="text-sm ">{{ assigment.description|truncatewords:50 }}</p>
@@ -29,6 +40,19 @@
             {% url 'create_assigment' milestone.id as new_assigment %}
             {% include 'utils/anchor_button.html' with type=1 label='Crear Entregable' url=new_assigment %}
         </div>
-
+        <!-- Modal -->
+        <div id="delete-confirmation-assigment"
+            class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden z-50">
+            <div class="bg-white rounded-lg p-4 w-80">
+                <h3 class="text-lg mb-4">¿Estás seguro de borrar el entregable ?</h3>
+                <div class="flex justify-end">
+                    <button id="confirm-button-assigment"
+                        class="bg-red-600 text-white px-4 py-2 rounded-lg">Confirmar</button>
+                    <button id="cancel-button-assigment" class="ml-2 bg-gray-300 px-4 py-2 rounded-lg">Cancelar</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+<script src="{% static 'js/project/manage_assigment.js' %}"></script>
