--- a/src/templates/utils/anchor_button.html
+++ b/src/templates/utils/anchor_button.html
@@ -1,4 +1,4 @@
-<a href="{{url|default:'#' }}" class="{{classname}} py-2 px-4 rounded-lg text-bg_white
+<a id="{{id}}" href="{{url|default:'#' }}" class="{{classname}} py-2 px-4 rounded-lg text-bg_white
     {% if type == 1 %} bg-[#636AF2] hover:bg-primary_dark {% endif %}
     {% if type == 2 %} bg-primary_light {% endif %}">
     {{label|default:'Button'}}
