--- a/src/templates/projects/assigment_section.html
+++ b/src/templates/projects/assigment_section.html
@@ -16,8 +16,7 @@
                         <div class="flex gap-4">
                             <!-- botton de borar -->
                             <a href="/project/assigment/delete/{{assigment.id}}" id="delete-assigment">
-                                <button class="rounded-lg p-1 px-2 text-white">{% include 'icon/DeleteIcon.html' with
-                                    h=24 w=24 %}</button>
+                                <button class="rounded-lg p-1 px-2 text-white">{% include 'icon/DeleteIcon.html' with h=24 w=24 %}</button>
                             </a>
                             <!-- botton de editar -->
                             <a href="/project/assigment/edit/{{assigment.id}}">
@@ -30,30 +29,38 @@
                     <p class="text-sm text-primary_medium">Fecha de Finalización: {{ assigment.end_date }}</p>
                     <p class="text-sm text-primary_medium">Estado: {{ assigment.state }}</p>
                     <div class="mt-2 text-center">
-                        {% include 'utils/anchor_button.html' with type=1 label='Subir Entrega' id='upload-file' %}
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
+                        {% if assigment.file %}
+                        <a href="{{ assigment.file.url }}"
+                            class="py-2 px-4 rounded-lg text-bg_white bg-primary_black" download>Descargar Entregable</a>
+                        {% else %}
+                            {% url 'upload_assigment' assigment.id as upload_url %}
+                            {% include 'utils/anchor_button.html' with type=1 label='Subir Entrega' id='upload-file' url=upload_url %}
+                        {% endif %}
 
-        <div class="flex justify-center mt-4">
-            {% url 'create_assigment' milestone.id as new_assigment %}
-            {% include 'utils/anchor_button.html' with type=1 label='Crear Entregable' url=new_assigment %}
-        </div>
-        <!-- Modal -->
-        <div id="delete-confirmation-assigment"
-            class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden z-50">
-            <div class="bg-white rounded-lg p-4 w-80">
-                <h3 class="text-lg mb-4">¿Estás seguro de borrar el entregable ?</h3>
-                <div class="flex justify-end">
-                    <button id="confirm-button-assigment"
-                        class="bg-red-600 text-white px-4 py-2 rounded-lg">Confirmar</button>
-                    <button id="cancel-button-assigment" class="ml-2 bg-gray-300 px-4 py-2 rounded-lg">Cancelar</button>
+
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+
+            <div class="flex justify-center mt-4">
+                {% url 'create_assigment' milestone.id as new_assigment %}
+                {% include 'utils/anchor_button.html' with type=1 label='Crear Entregable' url=new_assigment %}
+            </div>
+            <!-- Modal -->
+            <div id="delete-confirmation-assigment"
+                class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden z-50">
+                <div class="bg-white rounded-lg p-4 w-80">
+                    <h3 class="text-lg mb-4">¿Estás seguro de borrar el entregable ?</h3>
+                    <div class="flex justify-end">
+                        <button id="confirm-button-assigment"
+                            class="bg-red-600 text-white px-4 py-2 rounded-lg">Confirmar</button>
+                        <button id="cancel-button-assigment"
+                            class="ml-2 bg-gray-300 px-4 py-2 rounded-lg">Cancelar</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<script src="{% static 'js/project/manage_assigment.js' %}"></script>
+    <script src="{% static 'js/project/manage_assigment.js' %}"></script>
