--- a/src/templates/projects/manage_milestone.html
+++ b/src/templates/projects/manage_milestone.html
@@ -18,6 +18,15 @@
                 {% endif %}
             </h3>
 
+            {% if messages %}
+            <!-- This block checks for Django messages -->
+            <div id="messages" class="hidden">
+                {% for message in messages %}
+                <span>{{ message }}</span>
+                {% endfor %}
+            </div>
+            {% endif %}
+
 
             {% if is_editing %}
             <a href="/project/delete_milestone/{{milestone.id}}" id="delete-button">
@@ -28,7 +37,7 @@
             <div id="delete_confirmation"
                 class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden z-50">
                 <div class="bg-white rounded-lg p-4 w-80">
-                    <h3 class="text-lg mb-4" >¿Estás seguro de borrar la tarea `{{milestone.name}}`?</h3>
+                    <h3 class="text-lg mb-4">¿Estás seguro de borrar la tarea `{{milestone.name}}`?</h3>
                     <div class="flex justify-end">
                         <button id="confirm-button"
                             class="bg-red-600 text-white px-4 py-2 rounded-lg">Confirmar</button>
@@ -88,10 +97,7 @@
             </div>
         </form>
 
-
-
-
-
+        {% include 'utils/popup_success.html' %}
         <script src="{% static 'js/project/manage_milestone.js' %}" type="text/javascript"></script>
 
     </div>
