--- a/src/templates/projects/project_main_view.html
+++ b/src/templates/projects/project_main_view.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 bg-bg_gray w-full h-full p-4 rounded-xl">
-    {% for projects in projects %}
+    {% for project in projects %}
         {% include 'projects/project_card.html' %}
 
         {% empty %}
