--- a/src/templates/navigation/top_bar_controls.html
+++ b/src/templates/navigation/top_bar_controls.html
@@ -32,7 +32,7 @@
     <!-- Íconos de perfil y notificaciones -->
     <div class="flex gap-4 items-center">
         <!-- Notificaciones -->
-        <a href="/notifications"
+        <a href="/profile/notifications"
             class="p-2 border border-primary_lightest bg-white rounded-full hover:shadow-sm transition">
             {% include "icon/bell.html" with w="24" h="24" %}
         </a>
