fix: fixed the page behavior with the project section

--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -46,12 +46,12 @@
         </div>
 
         <!-- Botón de Google -->
-        <button
+        <!-- <button
             class="flex items-center justify-center bg-white text-black w-full py-2 border rounded-md mb-4 border-primary_medium">
             <span class="text-primary_black flex gap-4 justify-center text-center items-center">
                 <i> {% include 'icon/google_icon.html' with w='32' h='32' %} </i> Continuar con Google
             </span>
-        </button>
+        </button> -->
 
         <!-- Enlaces adicionales -->
         <a href="#" class="text-primary_black hover:underline mb-4 block font-bold">¿Olvidaste tu contraseña?</a>
