--- a/src/templates/projects/create_assigment.html
+++ b/src/templates/projects/create_assigment.html
@@ -6,7 +6,7 @@
 
 <div class="flex justify-center items-center">
 
-    <div class="flex flex-col mx-40 bg-bg_gray p-6 rounded-lg shadow-lg w-full h-full">
+    <div class="flex flex-col mx-40 bg-bg_gray p-6 rounded-lg shadow-lg w-full">
         <form method="post">
             {% csrf_token %}
             <div class="mt-8">
@@ -23,6 +23,17 @@
                     required>{% if is_editing %}{{assigment.description}}{% endif %}</textarea>
             </div>
 
+            <div class="mt-8 w-1/2">
+                <label for="user" class="block text-md font-medium text-primary_black">Usuario encargado</label>
+
+                <select name="user" id="user"
+                    class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm">
+                    {% for user in members %}
+                    <option value="{{user.id}}">{{user.username}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+
             <div class="w-1/2 mt-8">
                 <label for="end_date" class="block text-md font-medium text-primary_black">Fecha de
                     Finalizacion</label>
@@ -31,6 +42,7 @@
                     class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
                     required>
             </div>
+
 
             <div class="justify-end  items-center mt-4">
                 <a {% if is_editing %} href="/project/edit_milestone/{{assigment.milestone.id}}">
